update:点击自定义菜单条目时，弹出菜单条目名称。

--- a/右键事件/index.html
+++ b/右键事件/index.html
@@ -57,9 +57,25 @@
         function disappear() {
             menu.style.display = 'none';
         }
-//        document.oncontextmenu = contextMenu;
+
         document.addEventListener('contextmenu',contextMenu);
         document.addEventListener('click',disappear);
+
+        function popup(ev) {
+            var items = menu.getElementsByTagName('li');
+            for(let i = 0, len = items.length; i<len; i++){
+                items[i].onclick = function (ev) {
+                    var ev = ev || event;
+                    if(ev.stopPropagation){
+                        ev.stopPropagation();
+                    }else{
+                        ev.cancelBubble = true;
+                    }
+                    alert(this.innerHTML);
+                }
+            }
+        }
+        popup();
     </script>
 </body>
 </html>
