用来:after伪元素,实现了下拉动画,伪元素属于label因此收起动画貌似不好实现?

--- a/CSS实现折叠面板/CSS_fold.html
+++ b/CSS实现折叠面板/CSS_fold.html
@@ -39,6 +39,12 @@
             border-top: 1px solid #cccccc;
             background: #ffffff;
             line-height: 30px;
+            animation: down 0.5s;
+            overflow: hidden;
+        }
+        @keyframes down {
+            from{height: 0;}
+            to{height: 240px}
         }
     </style>
 </head>
