--- a/数据绑定/data_binding_1.html
+++ b/数据绑定/data_binding_1.html
@@ -33,7 +33,7 @@
             },
             set: function (newVal) {
                 console.log('你设置了' + key);
-                console.log('新的' + key + ' = ' + newVal)
+                console.log('新的' + key + ' = ' + newVal);
                 if (newVal === val) return;
                 val = newVal
             }
