--- a/数据绑定/data_binding_2.html
+++ b/数据绑定/data_binding_2.html
@@ -10,32 +10,31 @@ function Observer(data) {
     this.data = data;
     this.walk(data);
 }
-
-Observer.prototype.walk = function (obj) {
+Observer.prototype.walk =function (obj) {
     var val;
     for(var key in obj){
         if(obj.hasOwnProperty(key)){
             val = obj[key];
-            if(typeof val === 'object'){
+            if( typeof val === "object"){
                 new Observer(val);
             }
             this.convert(key,val);
         }
     }
 };
+
 Observer.prototype.convert = function (key,val) {
     Object.defineProperty(this.data,key,{
-        enumerable: true,
         configurable: true,
+        enumerable: true,
         get: function () {
-            console.log('你访问了' + key);
-            return val
+            console.log("访问了" + key);
+            return val;
         },
         set: function (newVal) {
-            console.log('你设置了' + key);
-            console.log('新的' + key + ' = ' + newVal);
             if (newVal === val) return;
-            val = newVal
+            val = newVal;
+            console.log("设置了" + key + "新值为" + newVal)
         }
     })
 };
