--- a/数据绑定/data_binding_1.html
+++ b/数据绑定/data_binding_1.html
@@ -29,7 +29,7 @@
             configurable: true,
             get: function () {
                 console.log('你访问了' + key);
-                return val
+                return val;
             },
             set: function (newVal) {
                 console.log('你设置了' + key);
