播放器: 暂时完成(第一版)

--- a/player/player.html
+++ b/player/player.html
@@ -9,7 +9,7 @@
 <div id="myPlayerBox">
     <div id="musicName"></div>
     <div id="singer"></div>
-    <div id="lastTime"></div>
+    <div id="lastTime">加载中</div>
     <div id="volumeBox">
         <div id="volumeBar">
             <div id="volumeColor"></div>
