播放器: 暂时完成(第一版)

--- a/player/player.html
+++ b/player/player.html
@@ -34,4 +34,27 @@
 <audio id="myPlayer" src=""></audio>
 </body>
 <script src="player.js"></script>
+<script type="text/javascript">
+    var images = [];
+    function preload() {
+        for (var i = 0; i < preload.arguments.length; i++) {
+            images[i] = preload.arguments[i]
+        }
+    }
+    preload(
+            "https://jiangchengshan.github.io/ife2017/player/music/西山居游戏音乐 - 瞿塘峡地图音乐(水域BGM).mp3",
+            "https://jiangchengshan.github.io/ife2017/player/music/万岁爺 - 卷睫盼.mp3",
+            "https://jiangchengshan.github.io/ife2017/player/music/骆集益 - 1945.mp3",
+            "https://jiangchengshan.github.io/ife2017/player/music/张本煜 - 一方天地.mp3",
+            "https://jiangchengshan.github.io/ife2017/player/music/陈鸿宇,苏紫旭,刘昊霖 - 别送我.mp3",
+            "https://jiangchengshan.github.io/ife2017/player/music/王筝 - 对你说.mp3",
+            "https://jiangchengshan.github.io/ife2017/player/music/米依,江河老师,江河 - 借我.mp3",
+            "https://jiangchengshan.github.io/ife2017/player/music/Cara Dillon - Craigie Hill.mp3",
+            "https://jiangchengshan.github.io/ife2017/player/music/音频怪物 - 归.mp3",
+            "https://jiangchengshan.github.io/ife2017/player/music/孟大宝 - 历历万乡（Cover 陈粒）.mp3",
+            "https://jiangchengshan.github.io/ife2017/player/music/燕池 - 人海 - 2015版.mp3",
+            "https://jiangchengshan.github.io/ife2017/player/music/藤田恵美 - Down By the Salley Gardens.mp3"
+    )
+</script>
+
 </html>
