--- a/cssLoading/loading.html
+++ b/cssLoading/loading.html
@@ -15,7 +15,7 @@
         #annulus{
             width: 0;
             height: 0;
-            border: 40px solid #1ecc0a;
+            border: 80px solid #1ecc0a;
             border-top-color: transparent;
             border-radius: 50%;
             animation: myfirst 0.7s infinite linear;
@@ -23,7 +23,7 @@
         #circleWhite{
             width: 0;
             height: 0;
-            border: 36px solid #ffffff;
+            border: 74px solid #ffffff;
             border-radius: 50%;
         }
 
@@ -49,22 +49,22 @@
         }
 
         #top .bg{
-            border: 26px solid #4689ff;
+            border: 50px solid #4689ff;
         }
         #top .maskRight{
-            border: 26px solid #45adff;
+            border: 50px solid #45adff;
             border-top-color: transparent;
             border-left-color: transparent;
-            animation: myopacityR 0.7s infinite linear;
+            animation: myopacityR 0.7s infinite steps(1, end);
         }
         #top .maskLeft{
-            border: 26px solid #4689ff;
+            border: 50px solid #4689ff;
             border-bottom-color: transparent;
             border-right-color: transparent;
-            animation: myopacityL 0.7s infinite linear;
+            animation: myopacityL 0.7s infinite steps(1, end);
         }
         #top .rotateLeft{
-            border: 26px solid #45adff;
+            border: 50px solid #45adff;
             border-bottom-color: transparent;
             border-right-color: transparent;
             animation: myfirst 0.7s infinite linear;
@@ -72,22 +72,22 @@
 
 
         #bottom .bg{
-            border: 26px solid #45adff;
+            border: 50px solid #45adff;
         }
         #bottom .maskRight{
-            border: 26px solid #4689ff;
+            border: 50px solid #4689ff;
             border-top-color: transparent;
             border-left-color: transparent;
-            animation: myopacityR 0.7s infinite linear;
+            animation: myopacityR 0.7s infinite steps(1, end);
         }
         #bottom .maskLeft{
-            border: 26px solid #45adff;
+            border: 50px solid #45adff;
             border-bottom-color: transparent;
             border-right-color: transparent;
-            animation: myopacityL 0.7s infinite linear;
+            animation: myopacityL 0.7s infinite steps(1, end);
         }
         #bottom .rotateLeft{
-            border: 26px solid #4689ff;
+            border: 50px solid #4689ff;
             border-bottom-color: transparent;
             border-right-color: transparent;
             animation: myfirst 0.7s infinite linear;
@@ -95,11 +95,12 @@
 
         #top{
             transform: rotate(-45deg);
-            animation: myopacityR 1.4s infinite linear;
+            animation: myopacityR 1.4s steps(1, end) infinite ;
         }
         #bottom{
+            opacity: 0;
             transform: rotate(-45deg);
-            animation: myopacityL 1.4s infinite linear;
+            animation: myopacityL 1.4s steps(1, end) infinite ;
         }
         @keyframes myfirst
         {
@@ -110,19 +111,14 @@
         @keyframes myopacityL
         {
             0% {opacity: 0;}
-            50% {opacity: 0;}
-            51% {opacity: 1;}
-            99% {opacity: 1;}
-            100% {opacity: 0;}
+            50%,100% {opacity: 1;}
         }
         @keyframes myopacityR
         {
             0% {opacity: 1;}
-            50% {opacity: 1;}
-            51% {opacity: 0;}
-            99% {opacity: 0;}
-            100% {opacity: 1;}
+            50%,100% {opacity: 0;}
         }
+
     </style>
 </head>
 <body>
