实现一个简单的小车模型

--- a/WebGL No.1/three.html
+++ b/WebGL No.1/three.html
@@ -68,7 +68,7 @@
     scene.add(torus4);       //圆环添加到场景中
 
     var light = new THREE.PointLight(0xffffff, 2, 100);     //点光源
-    light.position.set(0, 10, 20);
+    light.position.set(0, 10, 20);      //点光源位置
     scene.add(light);
 
     // render
