--- a/ECharts/No.3.html
+++ b/ECharts/No.3.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="main"></div>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-latest.js"></script>
 <script src="echarts.js"></script>
 <script>
 
