--- a/ECharts/No.3.html
+++ b/ECharts/No.3.html
@@ -15,10 +15,12 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-latest.js"></script>
 <script src="echarts.js"></script>
 <script>
+    var myChart = echarts.init(document.getElementById('main'));
+    myChart.showLoading();
 
     $.get('ne_110m/ne_110m_admin_0_countries.json', function (worldJson) {
+        myChart.hideLoading();
         echarts.registerMap('world', worldJson);
-        var chart = echarts.init(document.getElementById('main'));
         var option = {
             geo: {
                 map: 'world',
@@ -28,7 +30,7 @@
             },
             backgroundColor: '#cddee7'
         };
-        chart.setOption(option)
+        myChart.setOption(option)
     });
 
 
